Fix Get COmapnay
