# source/swagger_output.json
@@ -7,10 +7,10 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000/"
+      "url": "http://localhost:6060/"
     },
     {
-      "url": "https://localhost:3000/"
+      "url": "https://localhost:6060/"
     }
   ],
   "tags": [
@@ -26,7 +26,37 @@
         "parameters": [],
         "responses": {
           "200": {
+            "description": "Some description... OpenAPI 3.x",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/company/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
